# AI-Powered-Quantitative-Research-Investment-Intelligence-Platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: settings.py
src/: __init__.py
src/analysis/: stats.py
src/arbitrage/: pairs.py
src/backtesting/: engine.py
src/dashboard/: app.py
src/derivatives/: greeks.py  strategies.py
src/explainability/: alpha_score.py
src/factors/: fama_french.py
src/forecasting/: deep_models.py  models.py  monte_carlo.py  stochastic_processes.py
src/fundamentals/: analyzer.py
src/market_data/: fetcher.py  indicators.py
src/news_ai/: sentiment.py
src/portfolio/: demo.py  optimizer.py
src/regime_detection/: detector.py
src/risk/: attribution.py  engine.py  stress_test.py
src/sports/: historical.py  math_models.py  odds_client.py
src/utils/: helpers.py
src/valuation/: engine.py
tests/: test_alpha_score.py  test_attribution.py  test_backtesting.py  test_deep_forecasting.py  test_demo_portfolio.py  test_factors.py  test_greeks.py  test_options_strategies.py  test_pairs.py  test_quant_stats.py  test_risk.py  test_sports.py  test_stochastic_processes.py  test_stress_test.py  test_valuation.py
