[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "alphaforge"
version = "0.1.0"
description = "AI-Powered Quantitative Research & Investment Intelligence Platform"
authors = [{ name = "Julio Ricardo Barrios Amador", email = "j.barrios.2@estudiantec.cr" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.13.0",
    "finnhub-python>=2.4.20",
    "ta>=0.11.0",
    "cvxpy>=1.4.0",
    "hmmlearn>=0.3.2",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
